單筆: 新增歷史門牌邏輯